// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders components/tour/demo/basic.tsx extend context correctly 1`] = `
Array [
  <button
    class="ant-btn ant-btn-primary"
    type="button"
  >
    <span>
      Begin Tour
    </span>
  </button>,
  <div
    class="ant-divider ant-divider-horizontal"
    role="separator"
  />,
  <div
    class="ant-space ant-space-horizontal ant-space-align-center ant-space-gap-row-small ant-space-gap-col-small"
  >
    <div
      class="ant-space-item"
    >
      <button
        class="ant-btn ant-btn-default"
        type="button"
      >
        <span>
           Upload
        </span>
      </button>
    </div>
    <div
      class="ant-space-item"
    >
      <button
        class="ant-btn ant-btn-primary"
        type="button"
      >
        <span>
          Save
        </span>
      </button>
    </div>
    <div
      class="ant-space-item"
    >
      <button
        class="ant-btn ant-btn-default ant-btn-icon-only"
        type="button"
      >
        <span
          class="ant-btn-icon"
        >
          <span
            aria-label="ellipsis"
            class="anticon anticon-ellipsis"
            role="img"
          >
            <svg
              aria-hidden="true"
              data-icon="ellipsis"
              fill="currentColor"
              focusable="false"
              height="1em"
              viewBox="64 64 896 896"
              width="1em"
            >
              <path
                d="M176 511a56 56 0 10112 0 56 56 0 10-112 0zm280 0a56 56 0 10112 0 56 56 0 10-112 0zm280 0a56 56 0 10112 0 56 56 0 10-112 0z"
              />
            </svg>
          </span>
        </span>
      </button>
    </div>
  </div>,
  <div
    class="ant-tour ant-tour-placement-bottom"
    style="--arrow-x: 0px; --arrow-y: 0px; left: -1000vw; top: -1000vh; box-sizing: border-box; z-index: 1001;"
  >
    <div
      class="ant-tour-arrow"
      style="position: absolute; top: 0px; left: 0px;"
    />
    <div
      class="ant-tour-content"
    >
      <div
        class="ant-tour-inner"
      >
        <button
          class="ant-tour-close"
          type="button"
        >
          <span
            aria-label="close"
            class="anticon anticon-close ant-tour-close-icon"
            role="img"
          >
            <svg
              aria-hidden="true"
              data-icon="close"
              fill="currentColor"
              fill-rule="evenodd"
              focusable="false"
              height="1em"
              viewBox="64 64 896 896"
              width="1em"
            >
              <path
                d="M799.86 166.31c.02 0 .04.02.08.06l57.69 57.7c.04.03.05.05.06.08a.12.12 0 010 .06c0 .03-.02.05-.06.09L569.93 512l287.7 287.7c.04.04.05.06.06.09a.12.12 0 010 .07c0 .02-.02.04-.06.08l-57.7 57.69c-.03.04-.05.05-.07.06a.12.12 0 01-.07 0c-.03 0-.05-.02-.09-.06L512 569.93l-287.7 287.7c-.04.04-.06.05-.09.06a.12.12 0 01-.07 0c-.02 0-.04-.02-.08-.06l-57.69-57.7c-.04-.03-.05-.05-.06-.07a.12.12 0 010-.07c0-.03.02-.05.06-.09L454.07 512l-287.7-287.7c-.04-.04-.05-.06-.06-.09a.12.12 0 010-.07c0-.02.02-.04.06-.08l57.7-57.69c.03-.04.05-.05.07-.06a.12.12 0 01.07 0c.03 0 .05.02.09.06L512 454.07l287.7-287.7c.04-.04.06-.05.09-.06a.12.12 0 01.07 0z"
              />
            </svg>
          </span>
        </button>
        <div
          class="ant-tour-cover"
        >
          <img
            alt="tour.png"
            src="https://user-images.githubusercontent.com/5378891/197385811-55df8480-7ff4-44bd-9d43-a7dade598d70.png"
          />
        </div>
        <div
          class="ant-tour-header"
        >
          <div
            class="ant-tour-title"
          >
            Upload File
          </div>
        </div>
        <div
          class="ant-tour-description"
        >
          Put your files here.
        </div>
        <div
          class="ant-tour-footer"
        >
          <div
            class="ant-tour-indicators"
          >
            <span
              class="ant-tour-indicator-active ant-tour-indicator"
            />
            <span
              class="ant-tour-indicator"
            />
            <span
              class="ant-tour-indicator"
            />
          </div>
          <div
            class="ant-tour-buttons"
          >
            <button
              class="ant-btn ant-btn-primary ant-btn-sm ant-tour-next-btn"
              type="button"
            >
              <span>
                Next
              </span>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>,
]
`;

exports[`renders components/tour/demo/basic.tsx extend context correctly 2`] = `[]`;

exports[`renders components/tour/demo/gap.tsx extend context correctly 1`] = `
Array [
  <button
    class="ant-btn ant-btn-primary"
    type="button"
  >
    <span>
      Begin Tour with radius
    </span>
  </button>,
  <div
    class="ant-space ant-space-horizontal ant-space-align-center ant-space-gap-row-small ant-space-gap-col-small"
    style="display: flex; margin-top: 12px;"
  >
    <div
      class="ant-space-item"
    >
      Radius:
    </div>
    <div
      class="ant-space-item"
    >
      <div
        class="ant-input-number ant-input-number-outlined"
      >
        <div
          class="ant-input-number-handler-wrap"
        >
          <span
            aria-disabled="false"
            aria-label="Increase Value"
            class="ant-input-number-handler ant-input-number-handler-up"
            role="button"
            unselectable="on"
          >
            <span
              aria-label="up"
              class="anticon anticon-up ant-input-number-handler-up-inner"
              role="img"
            >
              <svg
                aria-hidden="true"
                data-icon="up"
                fill="currentColor"
                focusable="false"
                height="1em"
                viewBox="64 64 896 896"
                width="1em"
              >
                <path
                  d="M890.5 755.3L537.9 269.2c-12.8-17.6-39-17.6-51.7 0L133.5 755.3A8 8 0 00140 768h75c5.1 0 9.9-2.5 12.9-6.6L512 369.8l284.1 391.6c3 4.1 7.8 6.6 12.9 6.6h75c6.5 0 10.3-7.4 6.5-12.7z"
                />
              </svg>
            </span>
          </span>
          <span
            aria-disabled="false"
            aria-label="Decrease Value"
            class="ant-input-number-handler ant-input-number-handler-down"
            role="button"
            unselectable="on"
          >
            <span
              aria-label="down"
              class="anticon anticon-down ant-input-number-handler-down-inner"
              role="img"
            >
              <svg
                aria-hidden="true"
                data-icon="down"
                fill="currentColor"
                focusable="false"
                height="1em"
                viewBox="64 64 896 896"
                width="1em"
              >
                <path
                  d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
                />
              </svg>
            </span>
          </span>
        </div>
        <div
          class="ant-input-number-input-wrap"
        >
          <input
            aria-valuenow="2"
            autocomplete="off"
            class="ant-input-number-input"
            role="spinbutton"
            step="1"
            value="2"
          />
        </div>
      </div>
    </div>
  </div>,
  <div
    class="ant-tour ant-tour-placement-bottom"
    style="--arrow-x: 0px; --arrow-y: 0px; left: -1000vw; top: -1000vh; box-sizing: border-box; z-index: 1001;"
  >
    <div
      class="ant-tour-arrow"
      style="position: absolute; top: 0px; left: 0px;"
    />
    <div
      class="ant-tour-content"
    >
      <div
        class="ant-tour-inner"
      >
        <button
          class="ant-tour-close"
          type="button"
        >
          <span
            aria-label="close"
            class="anticon anticon-close ant-tour-close-icon"
            role="img"
          >
            <svg
              aria-hidden="true"
              data-icon="close"
              fill="currentColor"
              fill-rule="evenodd"
              focusable="false"
              height="1em"
              viewBox="64 64 896 896"
              width="1em"
            >
              <path
                d="M799.86 166.31c.02 0 .04.02.08.06l57.69 57.7c.04.03.05.05.06.08a.12.12 0 010 .06c0 .03-.02.05-.06.09L569.93 512l287.7 287.7c.04.04.05.06.06.09a.12.12 0 010 .07c0 .02-.02.04-.06.08l-57.7 57.69c-.03.04-.05.05-.07.06a.12.12 0 01-.07 0c-.03 0-.05-.02-.09-.06L512 569.93l-287.7 287.7c-.04.04-.06.05-.09.06a.12.12 0 01-.07 0c-.02 0-.04-.02-.08-.06l-57.69-57.7c-.04-.03-.05-.05-.06-.07a.12.12 0 010-.07c0-.03.02-.05.06-.09L454.07 512l-287.7-287.7c-.04-.04-.05-.06-.06-.09a.12.12 0 010-.07c0-.02.02-.04.06-.08l57.7-57.69c.03-.04.05-.05.07-.06a.12.12 0 01.07 0c.03 0 .05.02.09.06L512 454.07l287.7-287.7c.04-.04.06-.05.09-.06a.12.12 0 01.07 0z"
              />
            </svg>
          </span>
        </button>
        <div
          class="ant-tour-cover"
        >
          <img
            alt="tour.png"
            src="https://user-images.githubusercontent.com/5378891/197385811-55df8480-7ff4-44bd-9d43-a7dade598d70.png"
          />
        </div>
        <div
          class="ant-tour-header"
        >
          <div
            class="ant-tour-title"
          >
            Upload File
          </div>
        </div>
        <div
          class="ant-tour-description"
        >
          Put your files here.
        </div>
        <div
          class="ant-tour-footer"
        >
          <div
            class="ant-tour-buttons"
          >
            <button
              class="ant-btn ant-btn-primary ant-btn-sm ant-tour-next-btn"
              type="button"
            >
              <span>
                Finish
              </span>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>,
  <div
    class="ant-divider ant-divider-horizontal"
    role="separator"
  />,
  <div
    class="ant-space ant-space-horizontal ant-space-align-center ant-space-gap-row-small ant-space-gap-col-small"
  >
    <div
      class="ant-space-item"
    >
      <button
        class="ant-btn ant-btn-primary"
        type="button"
      >
        <span>
          Begin Tour with offset
        </span>
      </button>
    </div>
    <div
      class="ant-space-item"
    >
      <button
        class="ant-btn ant-btn-primary"
        type="button"
      >
        <span>
          Begin Tour with offsetX
        </span>
      </button>
    </div>
    <div
      class="ant-space-item"
    >
      <button
        class="ant-btn ant-btn-primary"
        type="button"
      >
        <span>
          Begin Tour with offsetY
        </span>
      </button>
    </div>
  </div>,
  <div
    class="ant-space ant-space-vertical ant-space-gap-row-small ant-space-gap-col-small"
    style="display: flex; margin-top: 12px;"
  >
    <div
      class="ant-space-item"
    >
      <div>
        offset:
        <div
          class="ant-input-number ant-input-number-outlined"
        >
          <div
            class="ant-input-number-handler-wrap"
          >
            <span
              aria-disabled="false"
              aria-label="Increase Value"
              class="ant-input-number-handler ant-input-number-handler-up"
              role="button"
              unselectable="on"
            >
              <span
                aria-label="up"
                class="anticon anticon-up ant-input-number-handler-up-inner"
                role="img"
              >
                <svg
                  aria-hidden="true"
                  data-icon="up"
                  fill="currentColor"
                  focusable="false"
                  height="1em"
                  viewBox="64 64 896 896"
                  width="1em"
                >
                  <path
                    d="M890.5 755.3L537.9 269.2c-12.8-17.6-39-17.6-51.7 0L133.5 755.3A8 8 0 00140 768h75c5.1 0 9.9-2.5 12.9-6.6L512 369.8l284.1 391.6c3 4.1 7.8 6.6 12.9 6.6h75c6.5 0 10.3-7.4 6.5-12.7z"
                  />
                </svg>
              </span>
            </span>
            <span
              aria-disabled="false"
              aria-label="Decrease Value"
              class="ant-input-number-handler ant-input-number-handler-down"
              role="button"
              unselectable="on"
            >
              <span
                aria-label="down"
                class="anticon anticon-down ant-input-number-handler-down-inner"
                role="img"
              >
                <svg
                  aria-hidden="true"
                  data-icon="down"
                  fill="currentColor"
                  focusable="false"
                  height="1em"
                  viewBox="64 64 896 896"
                  width="1em"
                >
                  <path
                    d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
                  />
                </svg>
              </span>
            </span>
          </div>
          <div
            class="ant-input-number-input-wrap"
          >
            <input
              aria-valuenow="2"
              autocomplete="off"
              class="ant-input-number-input"
              role="spinbutton"
              step="1"
              value="2"
            />
          </div>
        </div>
      </div>
    </div>
    <div
      class="ant-space-item"
    >
      <div>
        Horizontal offset:
        <div
          class="ant-input-number ant-input-number-outlined"
        >
          <div
            class="ant-input-number-handler-wrap"
          >
            <span
              aria-disabled="false"
              aria-label="Increase Value"
              class="ant-input-number-handler ant-input-number-handler-up"
              role="button"
              unselectable="on"
            >
              <span
                aria-label="up"
                class="anticon anticon-up ant-input-number-handler-up-inner"
                role="img"
              >
                <svg
                  aria-hidden="true"
                  data-icon="up"
                  fill="currentColor"
                  focusable="false"
                  height="1em"
                  viewBox="64 64 896 896"
                  width="1em"
                >
                  <path
                    d="M890.5 755.3L537.9 269.2c-12.8-17.6-39-17.6-51.7 0L133.5 755.3A8 8 0 00140 768h75c5.1 0 9.9-2.5 12.9-6.6L512 369.8l284.1 391.6c3 4.1 7.8 6.6 12.9 6.6h75c6.5 0 10.3-7.4 6.5-12.7z"
                  />
                </svg>
              </span>
            </span>
            <span
              aria-disabled="false"
              aria-label="Decrease Value"
              class="ant-input-number-handler ant-input-number-handler-down"
              role="button"
              unselectable="on"
            >
              <span
                aria-label="down"
                class="anticon anticon-down ant-input-number-handler-down-inner"
                role="img"
              >
                <svg
                  aria-hidden="true"
                  data-icon="down"
                  fill="currentColor"
                  focusable="false"
                  height="1em"
                  viewBox="64 64 896 896"
                  width="1em"
                >
                  <path
                    d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
                  />
                </svg>
              </span>
            </span>
          </div>
          <div
            class="ant-input-number-input-wrap"
          >
            <input
              aria-valuenow="2"
              autocomplete="off"
              class="ant-input-number-input"
              role="spinbutton"
              step="1"
              value="2"
            />
          </div>
        </div>
      </div>
    </div>
    <div
      class="ant-space-item"
    >
      <div>
        Vertical offset:
        <div
          class="ant-input-number ant-input-number-outlined"
        >
          <div
            class="ant-input-number-handler-wrap"
          >
            <span
              aria-disabled="false"
              aria-label="Increase Value"
              class="ant-input-number-handler ant-input-number-handler-up"
              role="button"
              unselectable="on"
            >
              <span
                aria-label="up"
                class="anticon anticon-up ant-input-number-handler-up-inner"
                role="img"
              >
                <svg
                  aria-hidden="true"
                  data-icon="up"
                  fill="currentColor"
                  focusable="false"
                  height="1em"
                  viewBox="64 64 896 896"
                  width="1em"
                >
                  <path
                    d="M890.5 755.3L537.9 269.2c-12.8-17.6-39-17.6-51.7 0L133.5 755.3A8 8 0 00140 768h75c5.1 0 9.9-2.5 12.9-6.6L512 369.8l284.1 391.6c3 4.1 7.8 6.6 12.9 6.6h75c6.5 0 10.3-7.4 6.5-12.7z"
                  />
                </svg>
              </span>
            </span>
            <span
              aria-disabled="false"
              aria-label="Decrease Value"
              class="ant-input-number-handler ant-input-number-handler-down"
              role="button"
              unselectable="on"
            >
              <span
                aria-label="down"
                class="anticon anticon-down ant-input-number-handler-down-inner"
                role="img"
              >
                <svg
                  aria-hidden="true"
                  data-icon="down"
                  fill="currentColor"
                  focusable="false"
                  height="1em"
                  viewBox="64 64 896 896"
                  width="1em"
                >
                  <path
                    d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
                  />
                </svg>
              </span>
            </span>
          </div>
          <div
            class="ant-input-number-input-wrap"
          >
            <input
              aria-valuenow="2"
              autocomplete="off"
              class="ant-input-number-input"
              role="spinbutton"
              step="1"
              value="2"
            />
          </div>
        </div>
      </div>
    </div>
  </div>,
  <div
    class="ant-tour"
    style="--arrow-x: 0px; --arrow-y: 0px; left: -1000vw; top: -1000vh; box-sizing: border-box; z-index: 1001;"
  >
    <div
      class="ant-tour-content"
    >
      <div
        class="ant-tour-inner"
      >
        <button
          class="ant-tour-close"
          type="button"
        >
          <span
            aria-label="close"
            class="anticon anticon-close ant-tour-close-icon"
            role="img"
          >
            <svg
              aria-hidden="true"
              data-icon="close"
              fill="currentColor"
              fill-rule="evenodd"
              focusable="false"
              height="1em"
              viewBox="64 64 896 896"
              width="1em"
            >
              <path
                d="M799.86 166.31c.02 0 .04.02.08.06l57.69 57.7c.04.03.05.05.06.08a.12.12 0 010 .06c0 .03-.02.05-.06.09L569.93 512l287.7 287.7c.04.04.05.06.06.09a.12.12 0 010 .07c0 .02-.02.04-.06.08l-57.7 57.69c-.03.04-.05.05-.07.06a.12.12 0 01-.07 0c-.03 0-.05-.02-.09-.06L512 569.93l-287.7 287.7c-.04.04-.06.05-.09.06a.12.12 0 01-.07 0c-.02 0-.04-.02-.08-.06l-57.69-57.7c-.04-.03-.05-.05-.06-.07a.12.12 0 010-.07c0-.03.02-.05.06-.09L454.07 512l-287.7-287.7c-.04-.04-.05-.06-.06-.09a.12.12 0 010-.07c0-.02.02-.04.06-.08l57.7-57.69c.03-.04.05-.05.07-.06a.12.12 0 01.07 0c.03 0 .05.02.09.06L512 454.07l287.7-287.7c.04-.04.06-.05.09-.06a.12.12 0 01.07 0z"
              />
            </svg>
          </span>
        </button>
        <div
          class="ant-tour-cover"
        >
          <img
            alt="tour.png"
            src="https://user-images.githubusercontent.com/5378891/197385811-55df8480-7ff4-44bd-9d43-a7dade598d70.png"
          />
        </div>
        <div
          class="ant-tour-header"
        >
          <div
            class="ant-tour-title"
          >
            Upload File
          </div>
        </div>
        <div
          class="ant-tour-description"
        >
          Put your files here.
        </div>
        <div
          class="ant-tour-footer"
        >
          <div
            class="ant-tour-buttons"
          >
            <button
              class="ant-btn ant-btn-primary ant-btn-sm ant-tour-next-btn"
              type="button"
            >
              <span>
                Finish
              </span>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>,
]
`;

exports[`renders components/tour/demo/gap.tsx extend context correctly 2`] = `[]`;

exports[`renders components/tour/demo/indicator.tsx extend context correctly 1`] = `
Array [
  <button
    class="ant-btn ant-btn-primary"
    type="button"
  >
    <span>
      Begin Tour
    </span>
  </button>,
  <div
    class="ant-divider ant-divider-horizontal"
    role="separator"
  />,
  <div
    class="ant-space ant-space-horizontal ant-space-align-center ant-space-gap-row-small ant-space-gap-col-small"
  >
    <div
      class="ant-space-item"
    >
      <button
        class="ant-btn ant-btn-default"
        type="button"
      >
        <span>
          Upload
        </span>
      </button>
    </div>
    <div
      class="ant-space-item"
    >
      <button
        class="ant-btn ant-btn-primary"
        type="button"
      >
        <span>
          Save
        </span>
      </button>
    </div>
    <div
      class="ant-space-item"
    >
      <button
        class="ant-btn ant-btn-default ant-btn-icon-only"
        type="button"
      >
        <span
          class="ant-btn-icon"
        >
          <span
            aria-label="ellipsis"
            class="anticon anticon-ellipsis"
            role="img"
          >
            <svg
              aria-hidden="true"
              data-icon="ellipsis"
              fill="currentColor"
              focusable="false"
              height="1em"
              viewBox="64 64 896 896"
              width="1em"
            >
              <path
                d="M176 511a56 56 0 10112 0 56 56 0 10-112 0zm280 0a56 56 0 10112 0 56 56 0 10-112 0zm280 0a56 56 0 10112 0 56 56 0 10-112 0z"
              />
            </svg>
          </span>
        </span>
      </button>
    </div>
  </div>,
  <div
    class="ant-tour ant-tour-placement-bottom"
    style="--arrow-x: 0px; --arrow-y: 0px; left: -1000vw; top: -1000vh; box-sizing: border-box; z-index: 1001;"
  >
    <div
      class="ant-tour-arrow"
      style="position: absolute; top: 0px; left: 0px;"
    />
    <div
      class="ant-tour-content"
    >
      <div
        class="ant-tour-inner"
      >
        <button
          class="ant-tour-close"
          type="button"
        >
          <span
            aria-label="close"
            class="anticon anticon-close ant-tour-close-icon"
            role="img"
          >
            <svg
              aria-hidden="true"
              data-icon="close"
              fill="currentColor"
              fill-rule="evenodd"
              focusable="false"
              height="1em"
              viewBox="64 64 896 896"
              width="1em"
            >
              <path
                d="M799.86 166.31c.02 0 .04.02.08.06l57.69 57.7c.04.03.05.05.06.08a.12.12 0 010 .06c0 .03-.02.05-.06.09L569.93 512l287.7 287.7c.04.04.05.06.06.09a.12.12 0 010 .07c0 .02-.02.04-.06.08l-57.7 57.69c-.03.04-.05.05-.07.06a.12.12 0 01-.07 0c-.03 0-.05-.02-.09-.06L512 569.93l-287.7 287.7c-.04.04-.06.05-.09.06a.12.12 0 01-.07 0c-.02 0-.04-.02-.08-.06l-57.69-57.7c-.04-.03-.05-.05-.06-.07a.12.12 0 010-.07c0-.03.02-.05.06-.09L454.07 512l-287.7-287.7c-.04-.04-.05-.06-.06-.09a.12.12 0 010-.07c0-.02.02-.04.06-.08l57.7-57.69c.03-.04.05-.05.07-.06a.12.12 0 01.07 0c.03 0 .05.02.09.06L512 454.07l287.7-287.7c.04-.04.06-.05.09-.06a.12.12 0 01.07 0z"
              />
            </svg>
          </span>
        </button>
        <div
          class="ant-tour-header"
        >
          <div
            class="ant-tour-title"
          >
            Upload File
          </div>
        </div>
        <div
          class="ant-tour-description"
        >
          Put your files here.
        </div>
        <div
          class="ant-tour-footer"
        >
          <div
            class="ant-tour-indicators"
          >
            <span>
              1 / 3
            </span>
          </div>
          <div
            class="ant-tour-buttons"
          >
            <button
              class="ant-btn ant-btn-primary ant-btn-sm ant-tour-next-btn"
              type="button"
            >
              <span>
                Next
              </span>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>,
]
`;

exports[`renders components/tour/demo/indicator.tsx extend context correctly 2`] = `[]`;

exports[`renders components/tour/demo/mask.tsx extend context correctly 1`] = `
Array [
  <button
    class="ant-btn ant-btn-primary"
    type="button"
  >
    <span>
      Begin Tour
    </span>
  </button>,
  <div
    class="ant-divider ant-divider-horizontal"
    role="separator"
  />,
  <div
    class="ant-space ant-space-horizontal ant-space-align-center ant-space-gap-row-small ant-space-gap-col-small"
  >
    <div
      class="ant-space-item"
    >
      <button
        class="ant-btn ant-btn-default"
        type="button"
      >
        <span>
           Upload
        </span>
      </button>
    </div>
    <div
      class="ant-space-item"
    >
      <button
        class="ant-btn ant-btn-primary"
        type="button"
      >
        <span>
          Save
        </span>
      </button>
    </div>
    <div
      class="ant-space-item"
    >
      <button
        class="ant-btn ant-btn-default ant-btn-icon-only"
        type="button"
      >
        <span
          class="ant-btn-icon"
        >
          <span
            aria-label="ellipsis"
            class="anticon anticon-ellipsis"
            role="img"
          >
            <svg
              aria-hidden="true"
              data-icon="ellipsis"
              fill="currentColor"
              focusable="false"
              height="1em"
              viewBox="64 64 896 896"
              width="1em"
            >
              <path
                d="M176 511a56 56 0 10112 0 56 56 0 10-112 0zm280 0a56 56 0 10112 0 56 56 0 10-112 0zm280 0a56 56 0 10112 0 56 56 0 10-112 0z"
              />
            </svg>
          </span>
        </span>
      </button>
    </div>
  </div>,
  <div
    class="ant-tour ant-tour-placement-bottom"
    style="--arrow-x: 0px; --arrow-y: 0px; left: -1000vw; top: -1000vh; box-sizing: border-box; z-index: 1001;"
  >
    <div
      class="ant-tour-arrow"
      style="position: absolute; top: 0px; left: 0px;"
    />
    <div
      class="ant-tour-content"
    >
      <div
        class="ant-tour-inner"
      >
        <button
          class="ant-tour-close"
          type="button"
        >
          <span
            aria-label="close"
            class="anticon anticon-close ant-tour-close-icon"
            role="img"
          >
            <svg
              aria-hidden="true"
              data-icon="close"
              fill="currentColor"
              fill-rule="evenodd"
              focusable="false"
              height="1em"
              viewBox="64 64 896 896"
              width="1em"
            >
              <path
                d="M799.86 166.31c.02 0 .04.02.08.06l57.69 57.7c.04.03.05.05.06.08a.12.12 0 010 .06c0 .03-.02.05-.06.09L569.93 512l287.7 287.7c.04.04.05.06.06.09a.12.12 0 010 .07c0 .02-.02.04-.06.08l-57.7 57.69c-.03.04-.05.05-.07.06a.12.12 0 01-.07 0c-.03 0-.05-.02-.09-.06L512 569.93l-287.7 287.7c-.04.04-.06.05-.09.06a.12.12 0 01-.07 0c-.02 0-.04-.02-.08-.06l-57.69-57.7c-.04-.03-.05-.05-.06-.07a.12.12 0 010-.07c0-.03.02-.05.06-.09L454.07 512l-287.7-287.7c-.04-.04-.05-.06-.06-.09a.12.12 0 010-.07c0-.02.02-.04.06-.08l57.7-57.69c.03-.04.05-.05.07-.06a.12.12 0 01.07 0c.03 0 .05.02.09.06L512 454.07l287.7-287.7c.04-.04.06-.05.09-.06a.12.12 0 01.07 0z"
              />
            </svg>
          </span>
        </button>
        <div
          class="ant-tour-cover"
        >
          <img
            alt="tour.png"
            src="https://user-images.githubusercontent.com/5378891/197385811-55df8480-7ff4-44bd-9d43-a7dade598d70.png"
          />
        </div>
        <div
          class="ant-tour-header"
        >
          <div
            class="ant-tour-title"
          >
            Upload File
          </div>
        </div>
        <div
          class="ant-tour-description"
        >
          Put your files here.
        </div>
        <div
          class="ant-tour-footer"
        >
          <div
            class="ant-tour-indicators"
          >
            <span
              class="ant-tour-indicator-active ant-tour-indicator"
            />
            <span
              class="ant-tour-indicator"
            />
            <span
              class="ant-tour-indicator"
            />
          </div>
          <div
            class="ant-tour-buttons"
          >
            <button
              class="ant-btn ant-btn-primary ant-btn-sm ant-tour-next-btn"
              type="button"
            >
              <span>
                Next
              </span>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>,
]
`;

exports[`renders components/tour/demo/mask.tsx extend context correctly 2`] = `[]`;

exports[`renders components/tour/demo/non-modal.tsx extend context correctly 1`] = `
Array [
  <button
    class="ant-btn ant-btn-primary"
    type="button"
  >
    <span>
      Begin non-modal Tour
    </span>
  </button>,
  <div
    class="ant-divider ant-divider-horizontal"
    role="separator"
  />,
  <div
    class="ant-space ant-space-horizontal ant-space-align-center ant-space-gap-row-small ant-space-gap-col-small"
  >
    <div
      class="ant-space-item"
    >
      <button
        class="ant-btn ant-btn-default"
        type="button"
      >
        <span>
           Upload
        </span>
      </button>
    </div>
    <div
      class="ant-space-item"
    >
      <button
        class="ant-btn ant-btn-primary"
        type="button"
      >
        <span>
          Save
        </span>
      </button>
    </div>
    <div
      class="ant-space-item"
    >
      <button
        class="ant-btn ant-btn-default ant-btn-icon-only"
        type="button"
      >
        <span
          class="ant-btn-icon"
        >
          <span
            aria-label="ellipsis"
            class="anticon anticon-ellipsis"
            role="img"
          >
            <svg
              aria-hidden="true"
              data-icon="ellipsis"
              fill="currentColor"
              focusable="false"
              height="1em"
              viewBox="64 64 896 896"
              width="1em"
            >
              <path
                d="M176 511a56 56 0 10112 0 56 56 0 10-112 0zm280 0a56 56 0 10112 0 56 56 0 10-112 0zm280 0a56 56 0 10112 0 56 56 0 10-112 0z"
              />
            </svg>
          </span>
        </span>
      </button>
    </div>
  </div>,
  <div
    class="ant-tour ant-tour-primary ant-tour-placement-bottom"
    style="--arrow-x: 0px; --arrow-y: 0px; left: -1000vw; top: -1000vh; box-sizing: border-box; z-index: 1001;"
  >
    <div
      class="ant-tour-arrow"
      style="position: absolute; top: 0px; left: 0px;"
    />
    <div
      class="ant-tour-content"
    >
      <div
        class="ant-tour-inner"
      >
        <button
          class="ant-tour-close"
          type="button"
        >
          <span
            aria-label="close"
            class="anticon anticon-close ant-tour-close-icon"
            role="img"
          >
            <svg
              aria-hidden="true"
              data-icon="close"
              fill="currentColor"
              fill-rule="evenodd"
              focusable="false"
              height="1em"
              viewBox="64 64 896 896"
              width="1em"
            >
              <path
                d="M799.86 166.31c.02 0 .04.02.08.06l57.69 57.7c.04.03.05.05.06.08a.12.12 0 010 .06c0 .03-.02.05-.06.09L569.93 512l287.7 287.7c.04.04.05.06.06.09a.12.12 0 010 .07c0 .02-.02.04-.06.08l-57.7 57.69c-.03.04-.05.05-.07.06a.12.12 0 01-.07 0c-.03 0-.05-.02-.09-.06L512 569.93l-287.7 287.7c-.04.04-.06.05-.09.06a.12.12 0 01-.07 0c-.02 0-.04-.02-.08-.06l-57.69-57.7c-.04-.03-.05-.05-.06-.07a.12.12 0 010-.07c0-.03.02-.05.06-.09L454.07 512l-287.7-287.7c-.04-.04-.05-.06-.06-.09a.12.12 0 010-.07c0-.02.02-.04.06-.08l57.7-57.69c.03-.04.05-.05.07-.06a.12.12 0 01.07 0c.03 0 .05.02.09.06L512 454.07l287.7-287.7c.04-.04.06-.05.09-.06a.12.12 0 01.07 0z"
              />
            </svg>
          </span>
        </button>
        <div
          class="ant-tour-cover"
        >
          <img
            alt="tour.png"
            src="https://user-images.githubusercontent.com/5378891/197385811-55df8480-7ff4-44bd-9d43-a7dade598d70.png"
          />
        </div>
        <div
          class="ant-tour-header"
        >
          <div
            class="ant-tour-title"
          >
            Upload File
          </div>
        </div>
        <div
          class="ant-tour-description"
        >
          Put your files here.
        </div>
        <div
          class="ant-tour-footer"
        >
          <div
            class="ant-tour-indicators"
          >
            <span
              class="ant-tour-indicator-active ant-tour-indicator"
            />
            <span
              class="ant-tour-indicator"
            />
            <span
              class="ant-tour-indicator"
            />
          </div>
          <div
            class="ant-tour-buttons"
          >
            <button
              class="ant-btn ant-btn-default ant-btn-sm ant-tour-next-btn"
              type="button"
            >
              <span>
                Next
              </span>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>,
]
`;

exports[`renders components/tour/demo/non-modal.tsx extend context correctly 2`] = `[]`;

exports[`renders components/tour/demo/placement.tsx extend context correctly 1`] = `
Array [
  <button
    class="ant-btn ant-btn-primary"
    type="button"
  >
    <span>
      Begin Tour
    </span>
  </button>,
  <div
    class="ant-tour"
    style="--arrow-x: 0px; --arrow-y: 0px; left: -1000vw; top: -1000vh; box-sizing: border-box; z-index: 1001;"
  >
    <div
      class="ant-tour-content"
    >
      <div
        class="ant-tour-inner"
      >
        <button
          class="ant-tour-close"
          type="button"
        >
          <span
            aria-label="close"
            class="anticon anticon-close ant-tour-close-icon"
            role="img"
          >
            <svg
              aria-hidden="true"
              data-icon="close"
              fill="currentColor"
              fill-rule="evenodd"
              focusable="false"
              height="1em"
              viewBox="64 64 896 896"
              width="1em"
            >
              <path
                d="M799.86 166.31c.02 0 .04.02.08.06l57.69 57.7c.04.03.05.05.06.08a.12.12 0 010 .06c0 .03-.02.05-.06.09L569.93 512l287.7 287.7c.04.04.05.06.06.09a.12.12 0 010 .07c0 .02-.02.04-.06.08l-57.7 57.69c-.03.04-.05.05-.07.06a.12.12 0 01-.07 0c-.03 0-.05-.02-.09-.06L512 569.93l-287.7 287.7c-.04.04-.06.05-.09.06a.12.12 0 01-.07 0c-.02 0-.04-.02-.08-.06l-57.69-57.7c-.04-.03-.05-.05-.06-.07a.12.12 0 010-.07c0-.03.02-.05.06-.09L454.07 512l-287.7-287.7c-.04-.04-.05-.06-.06-.09a.12.12 0 010-.07c0-.02.02-.04.06-.08l57.7-57.69c.03-.04.05-.05.07-.06a.12.12 0 01.07 0c.03 0 .05.02.09.06L512 454.07l287.7-287.7c.04-.04.06-.05.09-.06a.12.12 0 01.07 0z"
              />
            </svg>
          </span>
        </button>
        <div
          class="ant-tour-header"
        >
          <div
            class="ant-tour-title"
          >
            Center
          </div>
        </div>
        <div
          class="ant-tour-description"
        >
          Displayed in the center of screen.
        </div>
        <div
          class="ant-tour-footer"
        >
          <div
            class="ant-tour-indicators"
          >
            <span
              class="ant-tour-indicator-active ant-tour-indicator"
            />
            <span
              class="ant-tour-indicator"
            />
            <span
              class="ant-tour-indicator"
            />
          </div>
          <div
            class="ant-tour-buttons"
          >
            <button
              class="ant-btn ant-btn-primary ant-btn-sm ant-tour-next-btn"
              type="button"
            >
              <span>
                Next
              </span>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>,
]
`;

exports[`renders components/tour/demo/placement.tsx extend context correctly 2`] = `[]`;

exports[`renders components/tour/demo/render-panel.tsx extend context correctly 1`] = `
<div
  style="display: flex; flex-direction: column; row-gap: 16px; background: rgba(50, 0, 0, 0.65); padding: 8px;"
>
  <div
    class="ant-tour ant-tour-pure ant-tour-placement-top ant-tour-pure"
  >
    <div
      class="ant-tour-arrow"
    />
    <div
      class="ant-tour-content"
    >
      <div
        class="ant-tour-inner"
        role="tooltip"
      >
        <div
          class="ant-tour-content"
        >
          <div
            class="ant-tour-inner"
          >
            <button
              class="ant-tour-close"
              type="button"
            >
              <span
                aria-label="close"
                class="anticon anticon-close ant-tour-close-icon"
                role="img"
              >
                <svg
                  aria-hidden="true"
                  data-icon="close"
                  fill="currentColor"
                  fill-rule="evenodd"
                  focusable="false"
                  height="1em"
                  viewBox="64 64 896 896"
                  width="1em"
                >
                  <path
                    d="M799.86 166.31c.02 0 .04.02.08.06l57.69 57.7c.04.03.05.05.06.08a.12.12 0 010 .06c0 .03-.02.05-.06.09L569.93 512l287.7 287.7c.04.04.05.06.06.09a.12.12 0 010 .07c0 .02-.02.04-.06.08l-57.7 57.69c-.03.04-.05.05-.07.06a.12.12 0 01-.07 0c-.03 0-.05-.02-.09-.06L512 569.93l-287.7 287.7c-.04.04-.06.05-.09.06a.12.12 0 01-.07 0c-.02 0-.04-.02-.08-.06l-57.69-57.7c-.04-.03-.05-.05-.06-.07a.12.12 0 010-.07c0-.03.02-.05.06-.09L454.07 512l-287.7-287.7c-.04-.04-.05-.06-.06-.09a.12.12 0 010-.07c0-.02.02-.04.06-.08l57.7-57.69c.03-.04.05-.05.07-.06a.12.12 0 01.07 0c.03 0 .05.02.09.06L512 454.07l287.7-287.7c.04-.04.06-.05.09-.06a.12.12 0 01.07 0z"
                  />
                </svg>
              </span>
            </button>
            <div
              class="ant-tour-header"
            >
              <div
                class="ant-tour-title"
              >
                Hello World!
              </div>
            </div>
            <div
              class="ant-tour-description"
            >
              Hello World?!
            </div>
            <div
              class="ant-tour-footer"
            >
              <div
                class="ant-tour-indicators"
              >
                <span
                  class="ant-tour-indicator-active ant-tour-indicator"
                />
                <span
                  class="ant-tour-indicator"
                />
                <span
                  class="ant-tour-indicator"
                />
                <span
                  class="ant-tour-indicator"
                />
                <span
                  class="ant-tour-indicator"
                />
                <span
                  class="ant-tour-indicator"
                />
              </div>
              <div
                class="ant-tour-buttons"
              >
                <button
                  class="ant-btn ant-btn-primary ant-btn-sm ant-tour-next-btn"
                  type="button"
                >
                  <span>
                    Next
                  </span>
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="ant-tour ant-tour-pure ant-tour-placement-top ant-tour-pure"
  >
    <div
      class="ant-tour-arrow"
    />
    <div
      class="ant-tour-content"
    >
      <div
        class="ant-tour-inner"
        role="tooltip"
      >
        <div
          class="ant-tour-content"
        >
          <div
            class="ant-tour-inner"
          >
            <button
              class="ant-tour-close"
              type="button"
            >
              <span
                aria-label="close"
                class="anticon anticon-close ant-tour-close-icon"
                role="img"
              >
                <svg
                  aria-hidden="true"
                  data-icon="close"
                  fill="currentColor"
                  fill-rule="evenodd"
                  focusable="false"
                  height="1em"
                  viewBox="64 64 896 896"
                  width="1em"
                >
                  <path
                    d="M799.86 166.31c.02 0 .04.02.08.06l57.69 57.7c.04.03.05.05.06.08a.12.12 0 010 .06c0 .03-.02.05-.06.09L569.93 512l287.7 287.7c.04.04.05.06.06.09a.12.12 0 010 .07c0 .02-.02.04-.06.08l-57.7 57.69c-.03.04-.05.05-.07.06a.12.12 0 01-.07 0c-.03 0-.05-.02-.09-.06L512 569.93l-287.7 287.7c-.04.04-.06.05-.09.06a.12.12 0 01-.07 0c-.02 0-.04-.02-.08-.06l-57.69-57.7c-.04-.03-.05-.05-.06-.07a.12.12 0 010-.07c0-.03.02-.05.06-.09L454.07 512l-287.7-287.7c-.04-.04-.05-.06-.06-.09a.12.12 0 010-.07c0-.02.02-.04.06-.08l57.7-57.69c.03-.04.05-.05.07-.06a.12.12 0 01.07 0c.03 0 .05.02.09.06L512 454.07l287.7-287.7c.04-.04.06-.05.09-.06a.12.12 0 01.07 0z"
                  />
                </svg>
              </span>
            </button>
            <div
              class="ant-tour-cover"
            >
              <img
                alt="tour.png"
                src="https://user-images.githubusercontent.com/5378891/197385811-55df8480-7ff4-44bd-9d43-a7dade598d70.png"
              />
            </div>
            <div
              class="ant-tour-header"
            >
              <div
                class="ant-tour-title"
              >
                Hello World!
              </div>
            </div>
            <div
              class="ant-tour-description"
            >
              Hello World?!
            </div>
            <div
              class="ant-tour-footer"
            >
              <div
                class="ant-tour-indicators"
              >
                <span
                  class="ant-tour-indicator"
                />
                <span
                  class="ant-tour-indicator"
                />
                <span
                  class="ant-tour-indicator"
                />
                <span
                  class="ant-tour-indicator"
                />
                <span
                  class="ant-tour-indicator"
                />
                <span
                  class="ant-tour-indicator-active ant-tour-indicator"
                />
                <span
                  class="ant-tour-indicator"
                />
              </div>
              <div
                class="ant-tour-buttons"
              >
                <button
                  class="ant-btn ant-btn-default ant-btn-sm ant-tour-prev-btn"
                  type="button"
                >
                  <span>
                    Previous
                  </span>
                </button>
                <button
                  class="ant-btn ant-btn-primary ant-btn-sm ant-tour-next-btn"
                  type="button"
                >
                  <span>
                    Next
                  </span>
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="ant-tour ant-tour-pure ant-tour-placement-top ant-tour-pure ant-tour-primary"
  >
    <div
      class="ant-tour-arrow"
    />
    <div
      class="ant-tour-content"
    >
      <div
        class="ant-tour-inner"
        role="tooltip"
      >
        <div
          class="ant-tour-content"
        >
          <div
            class="ant-tour-inner"
          >
            <button
              class="ant-tour-close"
              type="button"
            >
              <span
                aria-label="close"
                class="anticon anticon-close ant-tour-close-icon"
                role="img"
              >
                <svg
                  aria-hidden="true"
                  data-icon="close"
                  fill="currentColor"
                  fill-rule="evenodd"
                  focusable="false"
                  height="1em"
                  viewBox="64 64 896 896"
                  width="1em"
                >
                  <path
                    d="M799.86 166.31c.02 0 .04.02.08.06l57.69 57.7c.04.03.05.05.06.08a.12.12 0 010 .06c0 .03-.02.05-.06.09L569.93 512l287.7 287.7c.04.04.05.06.06.09a.12.12 0 010 .07c0 .02-.02.04-.06.08l-57.7 57.69c-.03.04-.05.05-.07.06a.12.12 0 01-.07 0c-.03 0-.05-.02-.09-.06L512 569.93l-287.7 287.7c-.04.04-.06.05-.09.06a.12.12 0 01-.07 0c-.02 0-.04-.02-.08-.06l-57.69-57.7c-.04-.03-.05-.05-.06-.07a.12.12 0 010-.07c0-.03.02-.05.06-.09L454.07 512l-287.7-287.7c-.04-.04-.05-.06-.06-.09a.12.12 0 010-.07c0-.02.02-.04.06-.08l57.7-57.69c.03-.04.05-.05.07-.06a.12.12 0 01.07 0c.03 0 .05.02.09.06L512 454.07l287.7-287.7c.04-.04.06-.05.09-.06a.12.12 0 01.07 0z"
                  />
                </svg>
              </span>
            </button>
            <div
              class="ant-tour-header"
            >
              <div
                class="ant-tour-title"
              >
                Hello World!
              </div>
            </div>
            <div
              class="ant-tour-description"
            >
              Hello World?!
            </div>
            <div
              class="ant-tour-footer"
            >
              <div
                class="ant-tour-indicators"
              >
                <span
                  class="ant-tour-indicator"
                />
                <span
                  class="ant-tour-indicator"
                />
                <span
                  class="ant-tour-indicator"
                />
                <span
                  class="ant-tour-indicator"
                />
                <span
                  class="ant-tour-indicator-active ant-tour-indicator"
                />
              </div>
              <div
                class="ant-tour-buttons"
              >
                <button
                  class="ant-btn ant-btn-default ant-btn-sm ant-btn-background-ghost ant-tour-prev-btn"
                  type="button"
                >
                  <span>
                    Previous
                  </span>
                </button>
                <button
                  class="ant-btn ant-btn-default ant-btn-sm ant-tour-next-btn"
                  type="button"
                >
                  <span>
                    Finish
                  </span>
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders components/tour/demo/render-panel.tsx extend context correctly 2`] = `[]`;
